# transport/http/router.go
@@ -9,12 +9,14 @@ import (
 func (s *Server) setupRoutes() {
 	s.App.GET("/swagger/*", echoSwagger.WrapHandler)
 
+	auth := s.handler.Auth.ValidateAuth
+
 	s.App.POST("/login", s.handler.LoginUser)
 
 	s.App.POST("/user", s.handler.CreateUser)
-	s.App.GET("/user/:id", s.handler.GetUser)
-	s.App.PATCH("/user/:id", s.handler.UpdateUser)
-	s.App.DELETE("/user/:id", s.handler.DeleteUser)
+	s.App.GET("/user/:id", s.handler.GetUser, auth)
+	s.App.PATCH("/user/:id", s.handler.UpdateUser, auth)
+	s.App.DELETE("/user/:id", s.handler.DeleteUser, auth)
 
 	s.App.POST("/book", s.handler.CreateBook)
 	s.App.GET("/book/:id", s.handler.GetBook)
